--- a/index.html
+++ b/index.html
@@ -14,45 +14,72 @@
     </header>
 
     <main>
-      <h2>Our Cookies</h2>
-      <p>Checkout our latest and delicious cookies.</p>
-
-      <h3>Mint Chocolate</h3>
-      <p>Tasty mint chocolate cookies</p>
-      <img src="images/mint-cookie.png" alt="A single mint chocolate cookie" />
-
-      <h3>Peanut Butter</h3>
-      <p>Yummy peanut buttery goodness</p>
-      <img src="images/peanut-cookie.png" alt="A single peanut butter cookie" />
-
-      <h3>Oatmeal</h3>
-      <p>Your fitness instructors favorite</p>
-      <img src="images/oatmeal-cookie.png" alt="A single oatmeal cookie" />
-
-      <h3>Chocolate Chip</h3>
-      <p>Gooey chocolate you'll love</p>
-      <img src="images/chip-cookie.png" alt="A single chocolate chip cookie" />
+      <div class="container text-center">
+        <div class="row">
+          <div class="col">
+            <h2>Our Cookies</h2>
+            <p>Checkout our latest and delicious cookies.</p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col">
+            <h3>Mint Chocolate</h3>
+            <p>Tasty mint chocolate cookies</p>
+            <img src="images/mint-cookie.png" alt="A single mint chocolate cookie" />
+          </div>
+          <div class="col">
+            <h3>Peanut Butter</h3>
+            <p>Yummy peanut buttery goodness</p>
+            <img src="images/peanut-cookie.png" alt="A single peanut butter cookie" />
+          </div>
+          <div class="col">
+            <h3>Oatmeal</h3>
+            <p>Your fitness instructors favorite</p>
+            <img src="images/oatmeal-cookie.png" alt="A single oatmeal cookie" />
+          </div>
+          <div class="col">
+            <h3>Chocolate Chip</h3>
+            <p>Gooey chocolate you'll love</p>
+            <img src="images/chip-cookie.png" alt="A single chocolate chip cookie" />
+          </div>
+        </div>
+      </div>
     </main>
-    <div>
-      <h2>About us</h2>
-
-      <img src="images/bakers.svg" alt="illustrations of two people baking" />
-      <div>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-        velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-        occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-        mollit anim id est laborum.
+    <div class="container text-center">
+      <div class="row">
+        <div class="col">
+          <h2>About us</h2>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <img src="images/bakers.svg" alt="illustrations of two people baking" />
+        </div>
+        <div class="col">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+          veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+          commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+          velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+          occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+          mollit anim id est laborum.
+        </div>
       </div>
     </div>
     <footer>
-      <h2>Contact us</h2>
-      <div>
-        100 Broadway Avenue,<br />
-        New York, NY 10001 <br />
-        (212) 555-1234
+      <div class="container text-center">
+        <div class="row">
+          <div class="col">
+            <h2>Contact us</h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col">
+            100 Broadway Avenue,<br />
+            New York, NY 10001 <br />
+            (212) 555-1234
+          </div>
+        </div>
       </div>
     </footer>
   </body>
