Add images rounded-circle class

--- a/index.html
+++ b/index.html
@@ -25,22 +25,22 @@
           <div class="col">
             <h3>Mint Chocolate</h3>
             <p>Tasty mint chocolate cookies</p>
-            <img src="images/mint-cookie.png" alt="A single mint chocolate cookie" />
+            <img src="images/mint-cookie.png" alt="A single mint chocolate cookie" class="rounded-circle" />
           </div>
           <div class="col">
             <h3>Peanut Butter</h3>
             <p>Yummy peanut buttery goodness</p>
-            <img src="images/peanut-cookie.png" alt="A single peanut butter cookie" />
+            <img src="images/peanut-cookie.png" alt="A single peanut butter cookie" class="rounded-circle" />
           </div>
           <div class="col">
             <h3>Oatmeal</h3>
             <p>Your fitness instructors favorite</p>
-            <img src="images/oatmeal-cookie.png" alt="A single oatmeal cookie" />
+            <img src="images/oatmeal-cookie.png" alt="A single oatmeal cookie" class="rounded-circle" />
           </div>
           <div class="col">
             <h3>Chocolate Chip</h3>
             <p>Gooey chocolate you'll love</p>
-            <img src="images/chip-cookie.png" alt="A single chocolate chip cookie" />
+            <img src="images/chip-cookie.png" alt="A single chocolate chip cookie" class="rounded-circle" />
           </div>
         </div>
       </div>
@@ -53,7 +53,7 @@
       </div>
       <div class="row">
         <div class="col">
-          <img src="images/bakers.svg" alt="illustrations of two people baking" />
+          <img src="images/bakers.svg" alt="illustrations of two people baking" class="img-fluid rounded-circle" />
         </div>
         <div class="col">
           Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
