--- a/index.html
+++ b/index.html
@@ -9,8 +9,14 @@
   </head>
   <body>
     <header>
-      <h1>Cookie Store</h1>
-      <p>Buy our awesome cookies. All proceeds go to charity!</p>
+      <div class="container text-center" id="title">
+        <div class="row">
+          <div class="col">
+            <h1>Cookie Store</h1>
+            <p>Buy our awesome cookies. All proceeds go to charity!</p>
+          </div>
+        </div>
+      </div>
     </header>
 
     <main>
@@ -21,7 +27,7 @@
             <p>Checkout our latest and delicious cookies.</p>
           </div>
         </div>
-        <div class="row">
+        <div class="row row-cols-lg-4 row-cols-md-2 row-cols-sm-1">
           <div class="col">
             <h3>Mint Chocolate</h3>
             <p>Tasty mint chocolate cookies</p>
@@ -45,24 +51,26 @@
         </div>
       </div>
     </main>
-    <div class="container text-center">
-      <div class="row">
-        <div class="col">
-          <h2>About us</h2>
+    <div id="about">
+      <div class="container text-center">
+        <div class="row">
+          <div class="col">
+            <h2>About us</h2>
+          </div>
         </div>
-      </div>
-      <div class="row">
-        <div class="col">
-          <img src="images/bakers.svg" alt="illustrations of two people baking" class="img-fluid rounded-circle" />
-        </div>
-        <div class="col">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-          veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-          commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-          velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-          occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-          mollit anim id est laborum.
+        <div class="row">
+          <div class="col-xs-3 col-sm-3 col-md-4 col-lg-2">
+            <img src="images/bakers.svg" alt="illustrations of two people baking" class="img-fluid rounded-circle" />
+          </div>
+          <div class="col-xs-9 col-sm-9 col-md-8 col-lg-10" id="lorem">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+            veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+            commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+            velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+            occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+            mollit anim id est laborum.
+          </div>
         </div>
       </div>
     </div>
