--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <header>
       <div class="container text-center" id="title">
-        <div class="row">
+        <div class="row align-items-center rounded-circle">
           <div class="col">
             <h1>Cookie Store</h1>
             <p>Buy our awesome cookies. All proceeds go to charity!</p>
