--- a/alternating.html
+++ b/alternating.html
@@ -15,39 +15,39 @@
             <p>Checkout our latest and delicious cookies.</p>
           </div>
         </div>
-        <div class="row">
-          <div class="col order-xs-first order-sm-last">
+        <div class="row row-cols-1 row-cols-md-2">
+          <div class="col order-md-last">
             <h3>Mint Chocolate</h3>
             <p>Tasty mint chocolate cookies</p>
           </div>
-          <div class="col order-xs-last order-sm-first">
+          <div class="col order-md-first">
             <img src="images/mint-cookie.png" alt="A single mint chocolate cookie" class="rounded-circle" />
           </div>
         </div>
-        <div class="row">
-          <div class="col order-xs-last order-sm-first">
+        <div class="row row-cols-1 row-cols-md-2">
+          <div class="col order-md-first">
             <h3>Peanut Butter</h3>
             <p>Yummy peanut buttery goodness</p>
           </div>
-          <div class="col order-xs-first order-sm-last">
+          <div class="col order-md-last">
             <img src="images/peanut-cookie.png" alt="A single peanut butter cookie" class="rounded-circle" />
           </div>
         </div>
-        <div class="row">
-          <div class="col order-xs-first order-sm-last">
+        <div class="row row-cols-1 row-cols-md-2">
+          <div class="col order-md-last">
             <h3>Oatmeal</h3>
             <p>Your fitness instructors favorite</p>
           </div>
-          <div class="col order-last order-sm-first">
+          <div class="col order-md-first">
             <img src="images/oatmeal-cookie.png" alt="A single oatmeal cookie" class="rounded-circle" />
           </div>
         </div>
-        <div class="row">
-          <div class="col order-xs-last order-sm-first">
+        <div class="row row-cols-1 row-cols-md-2">
+          <div class="col order-md-first">
             <h3>Chocolate Chip</h3>
             <p>Gooey chocolate you'll love</p>
           </div>
-          <div class="col order-xs-first order-sm-last">
+          <div class="col order-md-last">
             <img src="images/chip-cookie.png" alt="A single chocolate chip cookie" class="rounded-circle" />
           </div>
         </div>
